# DiffViewer

client/: package-lock.json  package.json  webpack.config.ts
client/src/: diff.tsx  editor.tsx  index.ts  main.tsx  types.ts
server/: CMakeLists.txt  build.bat
server/Source/: server.cpp  server.h
server/Test/: Main.cpp
